--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "mysql2": "^2.3.3",
     "puppeteer": "^13.1.2",
     "rimraf": "^3.0.2",
-    "sequelize": "^6.14.1",
+    "sequelize": "^6.16.1",
     "winston": "^3.4.0"
   },
   "devDependencies": {
@@ -30,6 +30,7 @@
     "@types/winston": "^2.4.4",
     "eslint": "^8.7.0",
     "nodemon": "^2.0.15",
+    "sequelize-cli": "^6.4.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
   }
