--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon -r dotenv/config ./src/app.ts -e hbs,js,css,html",
     "build": "tsc -p .",
     "prebuild": "rimraf dist",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,8 +19,9 @@
     "express": "^4.17.2",
     "mysql2": "^2.3.3",
     "puppeteer": "^13.1.2",
+    "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "sequelize": "^6.16.1",
+    "typeorm": "^0.2.41",
     "winston": "^3.4.0"
   },
   "devDependencies": {
@@ -30,8 +32,8 @@
     "@types/winston": "^2.4.4",
     "eslint": "^8.7.0",
     "nodemon": "^2.0.15",
-    "sequelize-cli": "^6.4.1",
     "ts-node": "^10.4.0",
+    "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.5"
   }
 }
