[CM-04] Create entities typeorm & implement server-sent

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./src/app.js",
   "scripts": {
-    "dev": "nodemon -r dotenv/config ./src/app.ts -e hbs,js,css,html",
+    "dev": "nodemon -r dotenv/config --watch src/** --ext ts,json --ignore src/**/*.spec.ts --exec ts-node ./src/app.ts",
     "build": "tsc -p .",
     "prebuild": "rimraf dist",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -13,11 +13,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@toverux/expresse": "^2.4.0",
+    "@types/omit-empty": "^1.0.1",
+    "camelcase-keys": "^7.0.2",
     "convict": "^6.2.1",
     "convict-format-with-validator": "^6.2.0",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
+    "express-validator": "^6.14.0",
     "mysql2": "^2.3.3",
+    "omit-empty": "^1.0.0",
     "puppeteer": "^13.1.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
