--- a/package.json
+++ b/package.json
@@ -8,21 +8,29 @@
     "build": "tsc -p .",
     "prebuild": "rimraf dist",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "webpack": "webpack --config webpack.config.js --watch ./resources/index.js",
+    "webpack-dev": "webpack serve --config webpack.config.js --hot"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@toverux/expresse": "^2.4.0",
     "@types/omit-empty": "^1.0.1",
+    "axios": "^0.26.0",
+    "bootstrap": "^5.1.3",
     "camelcase-keys": "^7.0.2",
+    "chart.js": "^3.7.1",
     "convict": "^6.2.1",
     "convict-format-with-validator": "^6.2.0",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
+    "html2pdf.js": "^0.10.1",
+    "jquery": "^3.6.0",
     "mysql2": "^2.3.3",
     "omit-empty": "^1.0.0",
+    "popper.js": "^1.16.1",
     "puppeteer": "^13.1.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -35,10 +43,18 @@
     "@types/node": "^17.0.12",
     "@types/puppeteer": "^5.4.4",
     "@types/winston": "^2.4.4",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.6.0",
     "eslint": "^8.7.0",
+    "html-webpack-plugin": "^5.5.0",
     "nodemon": "^2.0.15",
+    "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.3.1",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.12.0",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   }
 }
