--- a/ormconfig.json
+++ b/ormconfig.json
@@ -3,7 +3,7 @@
 	"host": "localhost",
 	"port": 3306,
 	"username": "root",
-	"password": "1234",
+	"password": "admin",
 	"database": "rhub",
 	"entities": ["src/entity/**/*.ts"],
 	"migrations": ["src/migration/**/*.ts"],
