--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "webpack": "webpack --config webpack.config.js --watch ./resources/index.js",
-    "webpack-dev": "webpack serve --config webpack.config.js --hot"
+    "webpack-dev": "webpack serve --config webpack.config.js --hot",
+    "start": "node ./dist/app.js"
   },
   "author": "",
   "license": "ISC",
@@ -31,7 +32,7 @@
     "mysql2": "^2.3.3",
     "omit-empty": "^1.0.0",
     "popper.js": "^1.16.1",
-    "puppeteer": "^13.1.2",
+    "puppeteer": "^13.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "typeorm": "^0.2.41",
@@ -41,7 +42,7 @@
     "@types/convict": "^6.1.1",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.12",
-    "@types/puppeteer": "^5.4.4",
+    "@types/puppeteer": "^5.4.5",
     "@types/winston": "^2.4.4",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.6.0",
